Wed Jan 28 15:57:44 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Fixed compilation error with --enable-debug
  		Thanks to "Serhiy V. Matveyev" <matveyev@uatele.com> for
		pointing this out to me

Wed Jan 28 10:16:49 GMT 2004 (njh)
----------------------------------
  * libclamav:	Added support to scan some bounce messages
  		Thanks to Jay <sysop-clamav@coronastreet.net> for
		letting me bounce ideas off him

Tue Jan 27 22:36:31 CET 2004 (tk)
---------------------------------
  * clamd: clamuko: support VirusEvent (requested by Matt Butt
		    <mattb*cre8tiv.com>)

Tue Jan 27 14:04:51 GMT 2004 (trog)
-----------------------------------
  * libclamav:  OLE2 unpacker - add big-endian support

Mon Jan 26 22:09:19 CET 2004 (tk)
---------------------------------
  * libclamav: Makefile: do not remove clamav.h with make distclean (problem
	       reported by Thomas Lamy)

Mon Jan 26 20:56:30 CET 2004 (tk)
---------------------------------
  * libclamav: cli_scanole2 fixes from Trog

Mon Jan 26 16:00:02 GMT 2004 (trog)
-----------------------------------
  * libclamav:	VBA decoder - Fix malloc off-by-one. Add checking
                for middle and end strings in VBA project file.
                Fix compiler warnings.
		OLE2 unpacker - Remove global variables. Fix for
		nasty MacOffice docs.

Mon Jan 26 14:14:27 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Corrected endian problem (ntohs instead of htons)

Sun Jan 25 14:27:26 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Corrected usage message
		Support multiple servers separated by colons
		Started to honour --debug
		Dump core on LINUX if CL_DEBUG set

Sun Jan 25 07:31:00 CET 2004 (tk)
---------------------------------
  * libclamav: VBA wrapper - fixed NULL dereference in new code (reported
	       by Nigel)
  * clamscan: fixed possible crash with uninitialized filename variable
	      (thanks to Nigel)

Sat Jan 24 18:17:51 GMT 2004 (njh)